# Solana_Hackathon

./: .env.backup  .gitignore  ACTION_ITEMS_SUMMARY.md  ACTIVATE_PHASE1.md  ALL_PHASES_COMPLETE.md  ALL_TODOS_COMPLETE.md  ANALYTICS_TEST_RESULTS.md  API_INTEGRATION_GUIDE.md  API_TEST_RESULTS.md  ARCHITECTURE.md  Anchor.toml  BOUNTY_CARDS_FIXED.md  BOUNTY_CHAT_PAYMENT_FIX_COMPLETE.md  BUILD_ISSUE_SUMMARY.md  BUILD_STATUS.md  CHAT_IMPROVEMENTS_SUMMARY.md  CLEANUP_COMPLETE.md  COMMIT_SUMMARY.md  COMPREHENSIVE_TEST_REPORT.md  CSP_FIX_COMPLETE.md  Cargo.toml  DASHBOARD_README.md  DATABASE_SETUP.md  DEPLOYMENT_INSTRUCTIONS.md  DEVELOPMENT_CHECKLIST.md  DEVELOPMENT_LOG.md  DEVELOPMENT_NOTES.md  DIGITALOCEAN_ENV_FIX.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENABLE_V2_GUIDE.md  ENV_FILES_CONSOLIDATED.md  EXCHANGE_ADDRESSES_GUIDE.md  FILE_ORGANIZATION_GUIDE.md  FINAL_CHAT_FIXES.md  FINAL_V2_ORGANIZATION_SUMMARY.md  FRONTEND_ACCESS_FIX.md  FRONTEND_DEPLOYMENT_FIX.md  FRONTEND_RESTORED_FROM_01e56f7.md  FUND_ROUTING_SYSTEM.md  GDPR_COMPLIANCE.md  (+118 more)
.github/: PULL_REQUEST_TEMPLATE.md
config/: README.md  kora_keypair_info.txt
docs/: ACTIVITY_TRACKING_INTEGRATION.md  ACTIVITY_TRACKING_TEST_RESULTS.md  ANCHOR_UPGRADE_COMPLETE.md  ARCHITECTURE_X402_ANALYSIS.md  DEPLOYMENT_AWAITING_FUNDS.md  DOCUMENTATION_INDEX.md  FINAL_BUILD_STATUS.md  GAMIFICATION_BACKEND_TEST_RESULTS.md  GAMIFICATION_ENHANCEMENTS_PROPOSAL.md  GAMIFICATION_FRONTEND_COMPLETE.md  GAMIFICATION_IMPLEMENTATION_COMPLETE.md  GAMIFICATION_SYSTEM_COMPLETE.md  MIGRATION_AND_INTEGRATION_COMPLETE.md  MOBILE_GAMIFICATION_UI_COMPLETE.md  MULTI_BOUNTY_IMPLEMENTATION_COMPLETE.md  POINTS_LEADERBOARD_SYSTEM.md  V1_V2_BUILD_ANALYSIS.md  V1_V2_BUILD_METHODS.md  V2_DEPLOYMENT_GUIDE.md  V2_INTEGRATION_GUIDE.md  V2_STATUS.md  V2_TESTING_GUIDE.md  V2_V3_COMPARISON.md  V3_BUILD_SOLUTION.md  V3_BUILD_STATUS.md  V3_BUILD_SUCCESS.md  V3_CONFIG_UPDATE.md  V3_DEBUGGING_RETROSPECTIVE.md  V3_DEPLOYMENT_COMPLETE.md  V3_DEPLOYMENT_SUCCESS.md  V3_ECONOMICS_UPDATE_60_40.md  V3_ENTRY_LIMITATION_FIX.md  V3_FINAL_STATUS.md  V3_IDL_REBUILD_SUMMARY.md  V3_INITIALIZATION_COMPLETE_DEBUG.md  V3_INITIALIZATION_STATUS.md  V3_INITIALIZATION_SUCCESS.md  V3_KEYPAIR_BACKUP.md  V3_MOCK_PAYMENT_SETUP.md  V3_MULTIPLE_ENTRIES_ISSUE.md  (+10 more)
frontend/: .gitignore  ACTIVITY_TRACKER_TESTING.md  AUTOMATED_TESTS_SUMMARY.md  BANNER_IMAGES_GUIDE.md  FINAL_TEST_REPORT.md  OFFICIAL_LOGOS_GUIDE.md  QUICK_IMAGE_REFERENCE.md  README.md  README_BANNER_IMAGES.md  REDESIGN_README.md  TEST_RESULTS_SUMMARY.md  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  test-fetch.html  update-banner-images.sh
legal/: PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md
mobile-app/: AUTOMATED_TESTS_COMPLETE.md  COMPILATION_FIXES_COMPLETE.md  FINAL_COMPILATION_FIXES.md  JAVA_SETUP_REQUIRED.md  MOBILE_APP_FIX.md  MOBILE_APP_RESTORATION_COMPLETE.md  MOBILE_WEB_SYNC_COMPLETE.md  README.md  TESTING_GUIDE.md  TEST_RESULTS_SUMMARY.md  TEST_SUITE_SUMMARY.md  build.gradle.kts  (+6 more)
programs/billions-bounty/: Cargo.toml  package.json
programs/billions-bounty-v2/: Anchor.toml  Cargo.toml  package-lock.json
programs/billions-bounty-v2/.anchor/test-ledger/rocksdb.failed/: IDENTITY  LOG
programs/billions-bounty-v2/scripts/: generate_idl.js  generate_idl.js.bak  init_v2_raw.ts  test_v2_raw_payment.ts
programs/billions-bounty-v2/src/: lib.rs
programs/billions-bounty-v2/tests/: devnet_simple_validation.ts  edge_cases.spec.ts  phase1_phase2.spec.ts
programs/billions-bounty-v3/: AIRDROP_INFO.md  ALL_TESTS_PASSING.md  ANCHOR_UPGRADE_SUMMARY.md  ASSOCIATED_TOKEN_ACCOUNT_COMPARISON.md  AUTOMATIC_ROUTING_SOLUTION.md  Anchor.toml  BUILD_ERROR_ANALYSIS.md  BUILD_FIXES_LOG.md  BUILD_STATUS.md  BUILD_WORKSPACE_FIX.md  COMPONENT_INTEGRATION_EXAMPLES.md  COMPONENT_INTEGRATION_GUIDE.md  COMPREHENSIVE_TESTING_STRATEGY.md  Cargo.toml  DEPLOYMENT_LOG.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  FEATURE_FLAG_INTEGRATION.md  FEATURE_FLAG_STATUS.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_POINTS_2_AND_3.md  MOBILE_APP_FEATURE_FLAGS.md  PYTHON_TESTING_DOWNSIDES.md  RAW_TESTS_SETUP.md  ROUNDING_INVARIANTS.md  ROUNDING_VULNERABILITY_FIXES_COMPLETE.md  SIGNING_FIX_SUMMARY.md  TESTING_ALTERNATIVES.md  TESTING_COMPLETE.md  TESTING_FINAL_STATUS.md  TESTING_SETUP_COMPLETE.md  TESTING_SETUP_SUCCESS.md  TESTING_STATUS.md  TEST_FIX_SUMMARY.md  TEST_RESULTS.md  TEST_RESULTS_ROUNDING.md  TEST_RUN_STATUS.md  TEST_STATUS.md  V3_TESTING_IMPLEMENTATION_PLAN.md  (+9 more)
programs/billions-bounty-v3/scripts/: generate_idl.js
programs/billions-bounty-v3/src/: lib.rs
programs/billions-bounty-v3/tests/: edge_cases.spec.ts  fuzzing_arithmetic.spec.ts  init_lottery_devnet.spec.ts  integration.spec.ts  multi_bounty.spec.ts  multi_bounty_integration.spec.ts  raw_instruction_helpers.ts  rounding_edge_cases.spec.ts  security_fixes.spec.ts  security_fixes_raw.spec.ts
programs/billions-bounty/src/: lib.rs  main.rs
programs/billions-bounty/tests/: billions-bounty.ts
programs/nft-verification/: Cargo.toml
programs/nft-verification/src/: lib.rs
programs/staking/: Cargo.lock.bak  Cargo.toml
programs/staking-v2/: Cargo.toml
programs/staking-v2/src/: lib.rs
programs/staking/src/: lib.rs
(+710 files in other folders)
