[package]
name = "billions-bounty"
version = "0.1.0"
edition = "2021"
description = "Autonomous lottery system with fund locking and secure randomness"
authors = ["Billions Bounty Team"]

[lib]
crate-type = ["cdylib", "lib"]
name = "billions_bounty"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.0.0"
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
solana-client = "1.17.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
borsh = "0.10.3"
thiserror = "1.0.0"
