[package]
name = "billions-bounty"
version = "0.1.0"
edition = "2021"
description = "Autonomous lottery system with fund locking and secure randomness"
authors = ["Billions Bounty Team"]

[lib]
crate-type = ["cdylib", "lib"]
name = "billions_bounty"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
