[package]
name = "billions-bounty"
version = "0.1.0"
edition = "2021"
description = "Autonomous lottery system with fund locking and secure randomness"
authors = ["Billions Bounty Team"]

[lib]
crate-type = ["cdylib", "lib"]
name = "billions_bounty"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
opt-level = "z"        # Optimize for size instead of speed
lto = true            # Link-time optimization
codegen-units = 1     # Single codegen unit for better optimization
panic = "abort"       # Smaller panic handling
strip = true          # Remove debug symbols
overflow-checks = false  # Disable overflow checks to reduce size

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
