[package]
name = "staking"
version = "0.1.0"
edition = "2021"
description = "Legacy staking contract (deprecated - use staking-v2)"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"



